# noteflow-backend-v1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20251208000001_create_users.sql  20251208000002_create_notes.sql  20251208000004_create_tags.sql  20251208_003_create_revisions.sql  20251208_005_create_active_sessions.sql
src/: config.rs  lib.rs  main.rs
src/db/: mod.rs  postgres.rs  redis.rs
src/handlers/: auth.rs  mod.rs  notes.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: mod.rs  note.rs  revision.rs  session.rs  tag.rs  user.rs
src/services/: auth_service.rs  mod.rs  note_service.rs
src/utils/: errors.rs  jwt.rs  mod.rs  validation.rs
